kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-city
  labels:
    project: smart-city
    environment: production
